--- a/index.css
+++ b/index.css
@@ -2,7 +2,12 @@
 
 *{
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+:root{
+  --bgcolor :#F9F9F9;
 }
 
 html{
@@ -23,13 +28,13 @@ body{
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: none; 
-  border-radius: 5px;
+  border-radius: .3rem;
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #999999; 
-  border-radius: 10px;
+  border-radius: .6rem;
 }
 
 /* Handle on hover */
@@ -39,7 +44,8 @@ body{
 /*** Header ***/
 
 .my-header{
-  height: 80px;
+  min-height: 5rem;
+  max-width: 100%;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -47,9 +53,40 @@ body{
   position: fixed;
   z-index: 200;
   top: 0;
-  padding: 25px 50px;
-  box-shadow: 0 0 10px rgba(0,0,0,.09);
+  padding: 1.5rem 3rem;
+  box-shadow: 0 0 .6rem rgba(0,0,0,.09);
   background-color: #fff;
+}
+
+.open-menu-button{
+  display: none;
+  border: none;
+  background-color: #fff;
+  font-size: 1.8em;
+  color: #444444;
+  margin: 0 0 0 auto;
+  cursor: pointer;
+}
+
+.open-menu-button:hover{
+  color: black;
+  scale: 1.2;
+}
+
+.close-button{
+  display: none;
+  border: none;
+  background-color: #F9F9F9;
+  font-size: 1.8em;
+  color: #444444;
+  margin: 0 0 0 auto;
+  cursor: pointer;
+  order: -1;
+}
+
+.close-button:hover{
+  color: black;
+  scale: 1.2;
 }
 
 .my-header a{
@@ -68,6 +105,33 @@ body{
   display: flex;
   gap:20px;
   margin-left: auto;
+  transition: all .3s ease-in-out;
+  z-index: 300;
+}
+
+.mobile-links{
+  left: -100%!important;
+}
+
+.toggle--navlink{
+  left: 0!important;
+}
+
+.my-nav-links{
+  font-size: 1.5em;
+  display: flex;
+  position: fixed;
+  flex-direction: column;
+  width: 100%;
+  padding:  1.5rem 3rem;
+  gap:1.5em;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  text-align: center;
+  background-color: #F9F9F9;
+  transition: all .3s ease-in-out;
+  z-index: 300;
 }
 
 .my-links a:hover{
@@ -85,30 +149,31 @@ a.link--active{
 /*** Home Page***/
 .home-page{
   display: flex;
+  min-height: 100vh;
   align-content: space-between;
   column-gap: 4rem;
   align-items: center;
   position: relative;
-  height: 45rem;
-  padding: 0 4rem;
+  padding: 8rem 4rem;
   justify-content: center;
-  background-color: #F9F9F9;
+  background-color: var(--bgcolor);
 }
 
 .my--info{
   display: flex;
-  flex-direction: column;
-  row-gap: 20px;
+  flex-direction: column; 
+  row-gap: 1.3rem;
+  max-width:35rem ;
 }
 
 .my--role{
-  width: 35rem;
-  font-size: 2.7em;
+  max-width: 35rem;
+  font-size: clamp(2em, 5vw, 2.7em);
   font-weight: 800;
 }
 
 .my--description{
-  width: 35rem;
+  max-width: 35rem;
   color: #767676;
 }
 .social--links a{
@@ -117,12 +182,12 @@ a.link--active{
 
 .social--links{
   display: flex;
-  gap: 20px;
+  gap: 1.3rem;
 }
 
 .linkedin--icon, .git--icon{
   color: #333333;
-  font-size: 50px;
+  font-size: 3em;
 }
 
 .linkedin--icon:hover{
@@ -134,10 +199,10 @@ a.link--active{
 }
 
 .my--image{
-  width: 23rem;
-  height: 23rem;
+  width: clamp(20rem, 5vw, 23rem);
+  height: clamp(20rem, 5vw, 23rem);
   border-radius: 1.6rem;
-  box-shadow: 0 0 10px rgba(0,0,0,.1);
+  box-shadow: 0 0 0.6rem rgba(0,0,0,.1);
 }
 
 .tech--stacks{
@@ -146,10 +211,13 @@ a.link--active{
   align-items: center;
   margin-top: 2rem;
 }
-
+.tech-icons-container{
+  display: flex;
+  gap: 1em;
+}
 .tech--icon{
-  width: 2.5rem;
-  height: 2.5rem;
+  max-width: 2.5rem;
+  max-height: 2.5rem;
 
 }
 
@@ -159,14 +227,18 @@ a.link--active{
   align-items: center;
   width: 4rem;
   height: 4rem;
+  max-width: 4rem;
+  max-height: 4rem;
   background-color: #fff;
   border-radius: 50%;
-  box-shadow:  0px 0px 10px 3px rgba(0,0,0,.09);
+  box-shadow:  0px 0px .6rem .2rem rgba(0,0,0,.09);
 }
 
 .stack--text{
   font-size: 1.5em;
   font-weight: 500;
+  border-right: solid #767676;
+  padding: .4em;
 }
 /*** About Page***/
 .about-page{
@@ -174,27 +246,25 @@ a.link--active{
   align-content: space-between;
   position: relative;
   gap: 4rem;
-  height: 45rem;
+  min-height: 100vh;
   align-items: center;
   justify-content: center;
-  padding: 0 4rem;
-
-  background-color: #F9F9F9;
+  padding: 8rem 4rem;
+  background-color: var(--bgcolor);
 }
 .aboutme--section{
   display:flex;
   flex-direction: column;
   row-gap: 1.2em;
-  width: 35rem;
-
+  max-width: 35rem;
 }
 
 .aboutme--image{
-  width: 23rem;
-  height: 23rem;
+  max-width: 23rem;
+  max-height: 23rem;
   object-fit: cover;
   border-radius: 1.6rem;
-  box-shadow: 0 0 10px rgba(0,0,0,.1);
+  box-shadow: 0 0 .6rem rgba(0,0,0,.1);
 }
 
 .aboutme--title{
@@ -210,40 +280,7 @@ a.link--active{
 .aboutme--context{
   font-size: 1em;
   font-weight: 500;
-  color: #999999;
-}
-
-/*** Footer ***/
-.page-footer{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 5rem;
-  background-color: #333333;
-  color: #F9F9F9;
-  padding: 0 4rem;
-  gap: 4rem;
-  justify-content: center;
-  align-content: space-between;
-}
-
-.copyright--text{
-  font-weight: 600;
-}
-
-.social-links-footer{
-  display: flex;
-  gap: 1rem;
-  font-size: 1.5rem;
-  margin: 0 0 0 auto;
-}
-
-.linkedin-icon-footer, .git-icon-footer{
-  color: #fff;
-}
-
-.linkedin-icon-footer:hover, .git-icon-footer:hover{
-  font-size: 1.7rem;
+  color: #767676;
 }
 
 /***Projects Page***/
@@ -252,12 +289,12 @@ a.link--active{
   flex-direction: column;
   position: relative;  
   gap: 1rem;
-  height: 45rem;
+  min-height: 90vh;
   align-items: center;
   justify-content: center;
-  padding: 0 10rem;
+  padding: 8rem 4rem;
   
-  background-color: #F9F9F9;
+  background-color: var(--bgcolor);
 }
 
 .portfolio--text{
@@ -265,22 +302,29 @@ a.link--active{
   font-weight: 900;
   color: #147EFB;
 }
+
+.portfolio--items{
+  min-height: 20rem;
+}
+
 .portfolio--item{
   display: flex;
   flex-direction: row;
   gap: 2rem;
-  height: 20rem;
+  min-height: 20rem;
   background-color: #fff;
   border-radius: 1rem;
   padding: 1.2rem;
   margin-top: 2em;
   box-shadow: 0 0 10px rgba(0,0,0,.1);
+  align-items: center;
 }
 
 .project--image{
   border-radius: 1rem;
-  width: 100%;
-  box-shadow: 0 0 10px rgba(0,0,0,.1);
+  width: clamp(100%,10vw,100%);
+  height: auto;
+  box-shadow: 0 0 .6rem rgba(0,0,0,.1);
 }
 
 .projects--text{
@@ -308,7 +352,7 @@ a.link--active{
   align-content: center;
   align-items: center;
   row-gap: 1em;
-  padding: 2rem 0;
+  /* padding: 2rem 0; */
   text-align: center;
 }
 
@@ -325,7 +369,7 @@ a.link--active{
 
 .react--stack{
   font-weight: 500;
-  box-shadow: 0 0 10px rgba(0,0,0,.1);
+  box-shadow: 0 0 .6rem rgba(0,0,0,.1);
   padding: 0.4em;
   color: #333333;
 } 
@@ -336,12 +380,11 @@ a.link--active{
   flex-direction: column;
   position: relative;  
   gap: 1rem;
-  height: 90vh;
-  /* align-items: center; */
+  min-height: 100vh;
   justify-content: center;
-  padding: 0 10rem;
+  padding: 8rem 4rem;
   
-  background-color: #F9F9F9;
+  background-color: var(--bgcolor);
 }
 
 .contact--title{
@@ -350,7 +393,6 @@ a.link--active{
   margin-bottom: 3rem;
   color: #147EFB;
 }
-
 
 .contact--location,.contact--email{
   display: flex;
@@ -387,7 +429,7 @@ a.link--active{
   height: 4rem;
   padding: 1rem;
   border-radius: 60%;
-  box-shadow: 0 0 10px rgba(0,0,0,.1);;
+  box-shadow: 0 0 .6rem rgba(0,0,0,.1);;
 }
 
 .contact--content{
@@ -396,3 +438,137 @@ a.link--active{
   gap: 5rem;
 }
  
+/*** Footer ***/
+.page-footer{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  min-height: 5rem;
+  width: 100%;
+  background-color: #333333;
+  color: #F9F9F9;
+  padding: 5vh 5vw;
+  gap: 4rem;
+  justify-content: center;
+  align-content: space-between;
+  position: static;
+  bottom: 0;
+}
+
+.copyright--text{
+  font-weight: 600;
+}
+
+.social-links-footer{
+  display: flex;
+  gap: 1rem;
+  font-size: 1.5rem;
+  margin: 0 0 0 auto;
+}
+
+.linkedin-icon-footer, .git-icon-footer{
+  color: #fff;
+}
+
+.linkedin-icon-footer:hover, .git-icon-footer:hover{
+  font-size: 1.7rem;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 992px) {
+  /***Header***/
+  .my-links{
+      display: none;
+    }
+
+  .open-menu-button,.close-button{
+    display: block;
+  }
+  
+  /***Home Page***/
+  .home-page{
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .my--description{
+    max-width: 20rem;
+  }
+
+  .my--image{
+    order: -1;
+  }
+
+  .my--info{
+    text-align: center;
+    align-items: center;
+  }
+  .tech--stacks{
+    flex-direction: column;
+  }
+
+  .stack--text{
+    border-bottom: solid #767676 ;
+    padding-bottom: .3em;
+    margin-bottom: 1em;
+    border-right:none;
+  }
+
+  /***About***/
+  .about-page{
+    flex-direction: column;
+  }
+
+  .aboutme--section{
+    text-align: center;
+  }
+/***Projects***/
+  .portfolio--item{
+    min-width: 20rem;
+    flex-direction: column;
+  }
+
+  /***Contact***/
+  .contact-page{
+    text-align: center;
+  }
+
+  .project--image{
+    width: 100%;
+  }
+
+  .contact--content, .contact--location, .contact--email{
+    flex-direction: column;
+  }
+
+  /***Footer***/
+  .page-footer{
+    flex-direction: column;
+    gap: 2em;
+  }
+
+  .social-links-footer{
+    margin: 0;
+  }
+
+  
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+}
